--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Transit-Stop-Collector",
+  "name": "transit-stop-collector",
   "version": "1.0.0",
   "description": "A process for collecting transit data and maintaining a simplified database of stops with latitude/longitude.",
   "main": "./lib/index.js",
