--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/projectweekend/Transit-Stop-Collector",
   "dependencies": {
+    "cta-bus-tracker": "0.0.1",
     "mongoose": "^3.8.21"
   }
 }
