--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "cta-bus-tracker": "0.0.1",
-    "lodash": "^2.4.1",
-    "mongoose": "^3.8.21"
+    "mongoose": "^3.8.21",
+    "nomnom": "^1.8.1"
   }
 }
