--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "homepage": "https://github.com/projectweekend/Transit-Stop-Collector",
   "dependencies": {
     "async": "^0.9.0",
-    "cta-bus-tracker": "0.0.1",
-    "mongoose": "^3.8.21",
-    "nomnom": "^1.8.1"
+    "fast-csv": "^0.5.4",
+    "mongoose": "^3.8.21"
   }
 }
