--- a/config/chicago_cta.yml
+++ b/config/chicago_cta.yml
@@ -25,5 +25,5 @@ stop_times:
         - stop_id
         - stop_sequence
 sql:
-    routes_query: chicago_cta_query_routes.sql
-    stops_query: chicago_cta_query_stops.sql
+    routes_query: chicago_cta_routes.sql
+    stops_query: chicago_cta_stops.sql
