--- a/config/chicago_cta.yml
+++ b/config/chicago_cta.yml
@@ -23,12 +23,16 @@ gtfs:
             - trip_id
             - route_id
             - direction
+            - direction_id
     stop_times:
         file: chicago_cta_stop_times.txt
         columns:
             - trip_id
             - stop_id
             - stop_sequence
+export:
+    train: chicago_cta_train_export_ordering.txt
 sql:
     routes_query: chicago_cta_routes.sql
     stops_query: chicago_cta_stops.sql
+    train_export: chicago_cta_train_export.sql
